--- a/wp-content/themes/ecokaishu/_scss/pages/_price.scss
+++ b/wp-content/themes/ecokaishu/_scss/pages/_price.scss
@@ -10,10 +10,10 @@ article#price{
 
 	padding-bottom: 3.0rem;
 
-	// nav
+	// .tabIndex
 	//**************************************************************
 
-	nav{
+	.tabIndex{
 
 		//ul
 		ul{
