--- a/wp-content/themes/ecokaishu/_scss/style.scss
+++ b/wp-content/themes/ecokaishu/_scss/style.scss
@@ -107,6 +107,7 @@ $google: #D34836;
 @import "parts/form.scss";
 @import "parts/link.scss";
 @import "parts/contact.scss";
+@import "parts/plugin.scss";
 
 @import "pages/article.scss";
 @import "pages/columns.scss";
