--- a/wp-content/themes/ecokaishu/_scss/base/_common.scss
+++ b/wp-content/themes/ecokaishu/_scss/base/_common.scss
@@ -265,13 +265,6 @@ a{
 				&:hover{
 					color: $pink;
 					border-bottom: 1px solid $pink;
-					.label{
-						display: inline-block;
-						-webkit-animation-name: fadeIn;
-						-webkit-animation-duration: 0.5s;
-						animation-name: fadeIn;
-						animation-duration: 0.5s;
-					}
 				}
 
 			}
@@ -1197,6 +1190,7 @@ a{
 			&:nth-of-type(2){ a{ background: $pink; } }
 			&:nth-of-type(3){ a{ color: $darkGray; } }
 			&:nth-of-type(4){ a{ color: $darkGray; } }
+			&:nth-of-type(5){ a{ color: $darkGray; } }
 
 			//a
 			a{
@@ -1295,7 +1289,8 @@ a{
 				}
 				&:nth-of-type(2){ width: 50%; }
 				&:nth-of-type(3){ display: none; }
-				&:nth-of-type(3){ width: 10%; }
+				&:nth-of-type(4){ display: none; }
+				&:nth-of-type(5){ width: 10%; }
 
 				a{
 
