--- a/wp-content/themes/ecokaishu/_scss/parts/_contact.scss
+++ b/wp-content/themes/ecokaishu/_scss/parts/_contact.scss
@@ -57,6 +57,7 @@
 
 			&#tel{ .action{ background: $green; } }
 			&#mail{ .action{ background: $pink; } }
+			&#contact{ .action{ background: $orange; } }
 
 		}
 
