--- a/wp-content/themes/ecokaishu/_scss/base/_decoration.scss
+++ b/wp-content/themes/ecokaishu/_scss/base/_decoration.scss
@@ -33,6 +33,13 @@ sup, sub{
 .m1_t{ margin-top: 1.0rem !important; }
 .m2_t{ margin-top: 2.0rem !important; }
 
+.p0{ padding: 0 !important; }
+.p0_r{ padding-right: 0rem !important; }
+.p0_b{ padding-bottom: 0rem !important; }
+.p2_b{ padding-bottom: 2.0rem !important; }
+.p1_t{ padding-top: 1.0rem !important; }
+.p2_t{ padding-top: 2.0rem !important; }
+
 .green{ color: $green !important; }
 .pink{ color: $pink !important; }
 .orange{ color: $orange !important; }
