commit for merge@

--- a/wp-content/themes/ecokaishu/_scss/pages/_price.scss
+++ b/wp-content/themes/ecokaishu/_scss/pages/_price.scss
@@ -423,7 +423,7 @@ article#price{
 
 		table{
 			th,td{
-				border-top: 1px solid rgba($darkGray, .2);		
+				//border-top: 1px solid rgba($darkGray, .2);		
 				padding: 0.7rem 0.5rem;		
 			}
 			th {
