--- a/wp-content/themes/ecokaishu/_scss/style.scss
+++ b/wp-content/themes/ecokaishu/_scss/style.scss
@@ -125,3 +125,4 @@ $google: #D34836;
 @import "pages/accomplishment.scss";
 @import "pages/concierge.scss";
 @import "pages/voice.scss";
+@import "pages/lp.scss";
