--- a/wp-content/themes/ecokaishu/_scss/pages/_lp.scss
+++ b/wp-content/themes/ecokaishu/_scss/pages/_lp.scss
@@ -24,8 +24,9 @@
 	.txtContent {
 			background: rgba($black, .05);
 			padding: 1rem;
-			overflow: hidden;
 			margin: 1rem 0;
+			float: left;
+			width: 100%;
 			img {
 				max-width: 400px;
 				&.alignleft {
@@ -43,22 +44,17 @@
 					border-bottom: solid 1px rgba($black, .07);
 					padding: 1rem 0;
 				}
-				&.wth {
-					width: 60%;
-					margin: 0 auto 3rem auto;
-				}
 			}
 		}
 
 	.intro {
-		overflow: hidden;
 		background: {
 			image: url("assets/img/area/bg-area.jpg");
  			position: center top;
   			repeat: no-repeat;
   		}
   		padding-top: 100px;
-  		height: 692px;
+  		height: 592px;
 
 		h2 {
 			font-size: $biggest*2;
@@ -174,10 +170,7 @@
 		//***************************************************************
 
 		ul{
-
-			margin-bottom: 0;
-			padding-top: 3.0rem;
-			padding-bottom: 3.0rem;
+			padding: 3rem 0;
 			text-align: center;
 
 			//li
@@ -350,13 +343,13 @@
 
 			h3 {
 				font-size: 100%;
-				margin: 0;
-				line-height: normal;
+				margin: 0;				
 			}
 
 			h3, .tab {
 				float: left;
 				border-top: 1px solid rgba($gray, .9);
+				line-height: normal;
 				a {
 					display: block;
 					width: 185px;
@@ -607,7 +600,7 @@
 	}//end .purchase
 
 	.estimates {
-		.col {
+		.threecol {
 			margin-top: 2rem;
 			border: solid 1px rgba($black, .1);
 			padding: 1rem;
@@ -733,5 +726,145 @@
 				}
 			}
 		}
+		.txtContent {
+			position: relative;
+			table {
+				&.wth {
+					width: 60%;
+					margin: 0 auto 3rem auto;
+				}
+			}
+			.check {
+				width: 3rem;
+				height: 3rem;
+				line-height: 3rem;
+				font-size: $small;
+				background: $pink;
+				color: $white;
+				display: inline-block;
+				position: absolute;
+				top: -1.5rem;
+				@include border-radius(50%);
+				@include rotate(-10deg);
+			}
+		}
 	}//end .flow
+
+	.voices {
+		.fivecol, .sevencol {
+			margin-top: 3rem;
+		}
+		.fivecol {
+			border: 1px solid rgba($black, .1);
+			@include border-radius (10px);
+			padding: 1rem 1.5rem;
+			position: relative;
+			font-size: 95%;
+
+			h4 {
+				margin: 1rem 0;
+			}
+			dl {
+				margin-bottom: 1rem;
+				dt {
+					float: left;
+					width: 8%;
+					margin-bottom: 0.5rem;
+					.icon-download4 {
+						font-size: $big;
+					}
+				}
+				dd {
+					float: left;
+					width: 90%;
+					margin-bottom: 0.5rem;
+					a {
+						padding: 0.2rem 0.5rem;
+						margin-right: 0.5rem;
+						background: rgba($black, .05);
+						border: 1px solid rgba($black, .1);
+						@include border-radius(3px);
+						font-size: 90%;
+						display: inline-block;
+					}
+					span {
+						margin-right: 0.5rem;
+					}					
+				}
+			}
+			.star {
+				&:before {
+					content: "\e979 \e979 \e979 \e979 \e977";
+					line-height: 3rem;
+				}
+			}
+			.al_r {
+				color: rgba($black, .3);
+				font-size: 80%;
+				margin-top: 0.5rem;
+			}
+			.new {
+				width: 2.5rem;
+				height: 2.5rem;
+				line-height: 2.5rem;
+				font-size: $small;
+				background: $orange;
+				color: $white;
+				display: inline-block;
+				position: absolute;
+				top: 1.5rem;
+				right: 1rem;
+				text-align: center;
+				@include border-radius(50%);
+			}
+		}
+		.archiveList {
+			li {				
+				border-bottom: 1px solid rgba($black, .1);
+				padding: 0.5rem 0;
+				&:nth-of-type(1) {
+					border-top: 1px solid rgba($black, .1);
+				}
+			}
+			.star {
+				&:before {
+					content: "\e979 \e979 \e979 \e979 \e977";
+					vertical-align: top;
+					font-size: 15pt;
+				}
+			}
+			.icon-arrow-right3 {
+				vertical-align: top;
+				font-size: 15pt;
+				margin-left: 1.5rem;
+			}
+		}
+	}//end .voices
+	
+	.faq {
+		dl {
+			margin: 3rem auto;
+			width: 80%;
+			
+			dt, dd {
+				border-bottom: 1px solid rgba($black, .1);
+				padding: 1rem 0;
+				overflow: hidden;
+				span {
+					float: left;
+					width: 4%;
+					font-size: $biggest;
+				}
+				strong {
+					float: left;
+					width: 90%;
+				}
+			}
+			dt {
+				&:nth-of-type(1) {
+					border-top: 1px solid rgba($black, .1);
+				}
+			}
+		}
+	}//end .faq
 }
