--- a/wp-content/themes/ecokaishu/_scss/pages/_price.scss
+++ b/wp-content/themes/ecokaishu/_scss/pages/_price.scss
@@ -179,7 +179,6 @@ article#price{
 				cursor: pointer;
 				&:after{
 					color: $pink;
-					background: #facbcc;
 					content: "\e83a";
 					padding: 0 20px;
 				}
@@ -252,6 +251,7 @@ article#price{
 					&:after{
 						@include rotate(90deg);
 						right: -55px;
+						font-size: $biggest*2;
 					}
 				}
 			}
@@ -306,9 +306,15 @@ article#price{
 	border-bottom: 1px solid rgba($gray, .9);
 	margin-bottom: 30px;
 
-	li {
+	h3 {
+		font-size: 100%;
+		margin: 0;				
+	}
+
+	h3, .tab {
 		float: left;
 		border-top: 1px solid rgba($gray, .9);
+		line-height: normal;
 		a {
 			display: block;
 			width: 185px;
@@ -333,7 +339,7 @@ article#price{
 
 	// Mobile
 	@media all and (max-width: $maxWidth){
-		li {
+		h3{
 			width: 99%;
 
 			a {
@@ -341,19 +347,18 @@ article#price{
 				border-right: 1px solid rgba($gray, .9);
 			}
 		}
+		.tab {
+			display: none;
+		}
 	}
-}
+}//end .linkMenu
 
 //**********************************************************************
-// #basicCharge
+// #basicCharges
 //**********************************************************************
-#basicCharge, #purchase, #options {
-	td {
-		span {
-			margin-left: 20px;
-			font-weight: bold;
-			background: #facbcc;
-		}
+#basicCharges, #spworksCharges, #optionsCharges {
+	p {
+		margin: 10px 0;
 	}
 	// PC
 	@media all and (min-width: $minWidth){
@@ -361,15 +366,27 @@ article#price{
 			border-bottom: 1px solid rgba($gray, .9);
 			padding: 15px 0 15px 20px;
 		}
+		th {
+			width: 20%;
+		}
+		td {
+			&:last-of-type {
+				text-align: right;
+				width: 15%;
+			}
+		}		
+		.footnote {
+			margin: 2rem 0 !important;
+		}
 	}
 }
 
 
 //**********************************************************************
-// #itemPrice
+// #itemCharges
 //**********************************************************************
 
-#itemPrice{
+#itemCharges{
 
 	.item {
 		@include border-radius(15px);
@@ -380,11 +397,6 @@ article#price{
 			font-weight: normal;
 			text-align: center;
 		}
-	}
-	//h4
-	h4{
-		background: #facbcc;
-		display: inline-block;
 	}
 
 	// #electricApp
@@ -402,20 +414,8 @@ article#price{
 
 	}
 
-
-	// #guide
-	//**************************************************************
-
-	#guide{
-
-		//ul
-		ul{
-			padding-left: 1.0rem;
-			padding-bottom: 1.0rem;
-			li{
-				list-style: circle;
-			}
-		}
+	.appendix {
+		font-size: 80%;
 	}
 
 	// PC
@@ -428,9 +428,11 @@ article#price{
 			}
 			th {
 				text-align: left;
+				width: 65%;
 			}
 			td{
 				text-align: right;
+				width: 35%;
 			}
 		}
 
@@ -459,9 +461,6 @@ article#price{
 					}
 				}
 			}
-			.block{
-
-			}
 		}
 
 	}
@@ -479,7 +478,9 @@ article#price{
 		}
 
 		.item {
-			padding: .5rem;
+			padding: 0;
+			border-radius: 0;
+			border: none;
 		}
 
 		//#electricApp
